Add new style to calendar component in left_sidebar

--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -50,7 +50,7 @@
 					<%= content_for(:top_app_bar_title) %>
 				</div>
 			<% elsif props[:visible][:logo] %>
-				<a data-controller="ripple" class="relative inline-block mx-auto overflow-hidden rounded-full md:ml-0 md:px-5 ripple ripple-black" href="<%= feed_path %>">
+				<a data-controller="ripple" class="relative inline-block mx-auto overflow-hidden rounded-full md:ml-0 md:px-5 ripple ripple-black" href="<%= root_path %>">
 					<svg class="h-8 ml-2 text-green-500 fill-current md:ml-0 md:w-32 md:h-auto" height="26" viewBox="0 0 148 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M0.338745 14.6C0.338745 12.88 0.658745 11.37 1.29875 10.07C1.95874 8.77005 2.84874 7.77005 3.96874 7.07005C5.08874 6.37005 6.33874 6.02005 7.71874 6.02005C8.89874 6.02005 9.92874 6.26005 10.8087 6.74005C11.7087 7.22005 12.3987 7.85005 12.8787 8.63005V6.26005H18.0087V23H12.8787V20.63C12.3787 21.41 11.6787 22.04 10.7787 22.52C9.89874 23 8.86874 23.24 7.68874 23.24C6.32874 23.24 5.08874 22.89 3.96874 22.19C2.84874 21.47 1.95874 20.46 1.29875 19.16C0.658745 17.84 0.338745 16.32 0.338745 14.6ZM12.8787 14.63C12.8787 13.35 12.5187 12.34 11.7987 11.6C11.0987 10.86 10.2387 10.49 9.21874 10.49C8.19874 10.49 7.32874 10.86 6.60874 11.6C5.90874 12.32 5.55874 13.32 5.55874 14.6C5.55874 15.88 5.90874 16.9 6.60874 17.66C7.32874 18.4 8.19874 18.77 9.21874 18.77C10.2387 18.77 11.0987 18.4 11.7987 17.66C12.5187 16.92 12.8787 15.91 12.8787 14.63Z"/>
 						<path d="M26.7001 0.800049V23H21.5701V0.800049H26.7001Z"/>
