--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -1,6 +1,6 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'calendar' }, class: 'h-full' do %>
 	<div class="h-full">
-		<div data-calendar-target="calendar" class="bg-gray-50 mb:bg-transparent select-none tap-highlight-none md:py-3 md:rounded-lg md:text-center md:mx-0 md:mb-2 md:shadow-none bg-white py-3 rounded-lg text-center mx-3 mb-5">
+		<div data-calendar-target="calendar" class="mt-2 calendar bg-gray-50 bg-white mb-5 mb:bg-transparent md:mb-2 md:mx-0 md:py-3 md:rounded-lg md:shadow-none md:text-center mx-3 px-1 py-2 rounded-lg select-none tap-highlight-none text-center">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
 				<span class="font-extrabold ml-4 mr-2 text-green-500">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
@@ -36,7 +36,7 @@
 					<tr>
 						<% week.each do |day| %>
 							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
-								<%= content_tag :div, class: helpers.class_names('mx-auto text-xs day-of-month',
+								<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
 																																 { 'mt-1': @indicators&.include?(day) }) do %>
 									<%= day.strftime '%e' %>
 								<% end %>
