--- a/web/app/components/left_sidebar/calendar_component.html.erb
+++ b/web/app/components/left_sidebar/calendar_component.html.erb
@@ -1,24 +1,25 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'h-full' do %>
 	<div class="h-full">
-		<div data-calendar-target="calendar" class="select-none tap-highlight-none bg-white mb-5 md:mb-2 md:py-5 md:rounded-lg md:text-center pl-2 pr-5 rounded-lg text-center">
-			<div class="capitalize flex font-medium items-center justify-between pb-5 px-8 rounded-t-lg text-gray-500">
-				<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
-					<svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path d="M0 0h24v24H0z" fill="none"/>
-						<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
-					</svg>
-				<% end %>
-
-				<span class="font-black text-gray-600 text-sm uppercase">
+		<div data-calendar-target="calendar" class="calendar select-none tap-highlight-none bg-white mb-5 md:mb-2 md:py-5 md:rounded-lg md:text-center pl-2 pr-5 rounded-lg text-center">
+			<div class="capitalize flex font-medium items-center justify-between pb-5 rounded-t-lg text-gray-500">
+				<span class="font-extrabold ml-2 mr-2 text-green-500">
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
+				<div class="-mr-1 flex text-green-500">
+					<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path d="M0 0h24v24H0z" fill="none"/>
+							<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+						</svg>
+					<% end %>
 
-				<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
-					<svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-						<path d="M0 0h24v24H0z" fill="none"/>
-						<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
-					</svg>
-				<% end %>
+					<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'mx-1 cursor-pointer md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+						<svg class="h-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<path d="M0 0h24v24H0z" fill="none"/>
+							<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+						</svg>
+					<% end %>
+				</div>
 			</div>
 
 			<table class="table-auto w-full">
@@ -35,7 +36,7 @@
 					<tr>
 						<% week.each do |day| %>
 							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
-								<%= content_tag :div, class: helpers.class_names('mx-auto text-xs day-of-month',
+								<%= content_tag :div, class: helpers.class_names('relative z-10 mx-auto text-xs day-of-month',
 																																 { 'mt-1': @indicators&.include?(day) }) do %>
 									<%= day.strftime '%e' %>
 								<% end %>
