--- a/web/app/views/users/_form.html.erb
+++ b/web/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= notice %>
 
-<%= form_with(model: user, local: true, html: {enctype: "multipart/form-data"}, class: 'text-gray-800 text-sm space-y-5') do |form| %>
+<%= form_with(model: user, local: true, html: {enctype: "multipart/form-data", data: { turbo: false }}, class: 'text-gray-800 text-sm space-y-5') do |form| %>
 	<% if user.errors.any? %>
 		<div id="error_explanation">
 			<p><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</p>
