--- a/web/app/views/users/show.html.erb
+++ b/web/app/views/users/show.html.erb
@@ -167,18 +167,18 @@
 
 	<% if current_user.friendship_accepted? @user %>
 		<div class="pt-2 mx-auto space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
-			<%= month_calendar events: @upcoming_events do |date, events| %>
-				<a href="<%= my_agenda_path start_date: date %>" class="mx-auto text-sm day-of-month">
-					<%= date.strftime '%e' %>
-				</a>
+			<%#= month_calendar events: @upcoming_events do |date, events| %>
+<!--				<a href="<%#= my_agenda_path start_date: date %>" class="mx-auto text-sm day-of-month">-->
+					<%#= date.strftime '%e' %>
+<!--				</a>-->
 
-				<% events.each_with_index do |event, index| %>
-					<% if event && index == 0 %>
-						<div class="w-1 h-1 mx-auto bg-green-500 rounded-full">
-						</div>
-					<% end %>
-				<% end %>
-			<% end %>
+				<%# events.each_with_index do |event, index| %>
+					<%# if event && index == 0 %>
+<!--						<div class="w-1 h-1 mx-auto bg-green-500 rounded-full">-->
+<!--						</div>-->
+					<%# end %>
+				<%# end %>
+			<%# end %>
 		</div>
 
 		<div class="pt-2 mx-auto mb-24 space-y-2 bg-gray-50 is-animated lg:w-9/12 md:mt-40 sm:container">
