--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -1,16 +1,16 @@
 <%= content_tag :div, id: 'swipable', data: { controller: 'hero--swipable' }, class: 'flex' do %>
 	<% if @show_swipable %>
 		<div class="mb-10 flex w-full">
-			<div class="<%= helpers.class_names('md:mt-5 md:mx-auto md:px-2 md:rounded-xl md:w-11/12 px-1 py-5 w-full',
-																					{ 'bg-gray-100 md:bg-gray-50 md:shadow': current_stage != :end_train_message,
-																						'bg-green-50':                         current_stage == :end_train_message }) %>">
+			<div class="<%= helpers.class_names('md:mx-auto mx-5 md:px-5 py-5 w-full',
+																					{ '': current_stage != :end_train_message,
+																						'': current_stage == :end_train_message }) %>">
 				<% if current_stage == :train %>
 					<div data-swipable-target="items">
-						<div class="px-5 mb-5 text-center">
+						<div class="mb-5">
 							<div class="font-black text-xl">
 								Quais tipos de evento você curte?
 							</div>
-							<div class="text-sm text-gray-500 md:px-12">
+							<div class="text-xs md:text-sm text-gray-500 w-10/12 md:w-8/12">
 								Para receber sugestões personalizadas, indique ao menos
 								<span class="text-green-500 font-bold"><%= @min_events_to_train - events_trained %> eventos</span>
 								que você curte.
@@ -24,7 +24,7 @@
 									<%= render Hero::TrainEventComponent.with_collection(@events_to_train, user: @user, open_in_sidebar: true) %>
 								</div>
 								<div
-									class="flex font-bold h-24 items-center justify-center text-green-500 text-md text-xl hidden"
+									class="flex font-bold items-center text-green-500 text-md text-xl hidden"
 									data-toggle-loader-target="on">
 									Carregando
 									<svg data-toggle-loader-target="onIcon" class="w-5 h-5 ml-2 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -37,22 +37,22 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_train_message %>
-					<div class="h-full flex flex-col items-center justify-center p-5 mx-5 my-auto space-y-5 text-center">
-						<div id="end-message-title" class="font-bold px-5 text-green-600">
-							<div><%= "Obrigado #{@user.first_name}!" %></div>
-							<div>Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
+					<div class="bg-green-50 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center">
+						<div id="end-message-title" class="px-5 text-green-700">
+							<div class="font-bold"><%= "Obrigado #{@user.first_name}!" %></div>
+							<div class="font-light">Agora já consigo recomendar eventos parecidos com seu gosto pessoal.</div>
 						</div>
-						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-2 font-semibold text-white bg-green-500 rounded-full cursor-pointer hover:bg-green-600' do %>
+						<%= content_tag :div, data: { reflex: 'click->Train#hide_train' }, class: 'px-4 py-3 md:py-2 font-semibold text-white bg-green-500 rounded-full cursor-pointer hover:bg-green-600' do %>
 							Ver recomendações
 						<% end %>
 					</div>
 				<% end %>
 				<% if current_stage == :suggestions %>
-					<div class="px-5 mb-5 text-center">
+					<div class="mb-5">
 						<div class="font-black text-xl">
 							Indicados para você
 						</div>
-						<div class="text-sm text-gray-500">
+						<div class="text-xs md:text-sm text-gray-500">
 							Com base nos eventos que você curtiu
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 					</div>
 				<% end %>
 				<% if current_stage == :end_suggestions_message %>
-					<div class="flex flex-col h-full items-center justify-center mx-5 my-auto p-5 rounded-lg space-y-5 text-center text-gray-800">
+					<div class="bg-green-50 flex flex-col h-full items-center justify-center my-auto p-5 rounded-xl space-y-5 text-center text-gray-800">
 						<div id="end-message-title" class="font-semibold px-5 text-gray-600">
 							<%= "Você já viu todas as recomendações que eu tinha para você hoje 😃" %>
 						</div>
