--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -1,4 +1,4 @@
-<%= render Modal::SignInComponent.new( text: nil) %>
+<%= render Modal::SignInComponent.new(text: nil) %>
 
 <div id="main-content" class="md:grid md:grid-cols-12 max-w-screen-xl mx-auto">
 	<% unless mobile_device? %>
@@ -12,6 +12,11 @@
 	<section id="main-sidebar" class="col-span-12 md:col-span-5">
 		<div class="mx-auto mb-24 space-y-2 is-animated sm:container">
 			<%= render Hero::SwipableComponent.new(user: current_user) %>
+			<% if @upcoming_events.present? %>
+				<div class="font-black pb-5 px-5 text-xl pt-4">
+					Eventos em Porto Alegre
+				</div>
+			<% end %>
 			<%= render MainSidebar::GroupByDayListComponent.new(events: @upcoming_events, user: current_user, open_in_sidebar: true) %>
 		</div>
 	</section>
@@ -35,9 +40,9 @@
 					</svg>
 				</div>
 			</div>
-<!--			<div id="user-resources-list" class="md:ml-8 md:mt-8 md:text-sm sticky top-12 transform">-->
+			<!--			<div id="user-resources-list" class="md:ml-8 md:mt-8 md:text-sm sticky top-12 transform">-->
 
-<!--			</div>-->
+			<!--			</div>-->
 		</section>
 	<% end %>
 
